fix: swger url
